--- a/medgenesis/package.json
+++ b/medgenesis/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
     "@splinetool/react-spline": "^4.0.0",
+    "axios": "^1.8.3",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
