--- a/medgenesis/package.json
+++ b/medgenesis/package.json
@@ -19,7 +19,7 @@
     "@splinetool/react-spline": "^4.0.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.1.3",
-    "axios": "^1.8.3",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "date-fns": "^2.29.3",
     "framer-motion": "^12.6.3",
@@ -27,6 +27,7 @@
     "motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.2.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.2.0",
