--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,14 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
+    "ethers": "^6.14.1",
     "express": "^5.1.0",
+    "form-data": "^4.0.2",
+    "ipfs-http-client": "^60.0.1",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.0.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
