--- a/medgenesis/package.json
+++ b/medgenesis/package.json
@@ -22,16 +22,21 @@
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "date-fns": "^2.29.3",
+    "ethers": "^6.14.1",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.477.0",
     "motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
+    "web3": "^4.16.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
